# errno

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README.md  TODO  autogen.sh  bootstrap.sh  configure.ac  errno.1  errno.spec.in  requirements.txt
po/: LINGUAS  Makefile.am  Makevars  POTFILES.in  en_US.po  errno.pot
src/: Makefile.am  dict.h  errnames.c  errno.c  gcc-compat.h  get-err-names  get-html-names  get-net-names  get-sig-names  get-web-names  get-x11-names  netnames.c  pamnames.c
